--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
   <div class="player_two">
     <audio controls>
       <source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mpeg">
-      Your browser does not support the audio element.
+      Your browser does not support the audio tag.
     </audio>
   </div>
 
